--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1"> <a style="color:white">O+O tech </a></h1>
         <h3 class="mb-5">
-          <em style="color:white">致力于中欧跨境企业的国际品牌营销</em>
+          <em style="color:white">致力于中欧跨境企业的国际品牌营销 李璇大美女</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">发现更多</a>
       </div>
