--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1"> <a style="color:white">O+O tech </a></h1>
         <h3 class="mb-5">
-          <em style="color:white">致力于中欧跨境企业的国际品牌营销 李璇大美女</em>
+          <em style="color:white">致力于中欧跨境企业的国际品牌营销</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">发现更多</a>
       </div>
@@ -68,10 +68,9 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-            <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-              <a href="https://unsplash.com/">Unsplash</a>!</p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+            <h2>Offline + Online 双线程服务</h2>
+            <p class="lead mb-5">国际最新潮流设计与制作工艺，为您塑造高品质品牌和产品形象</p>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">服务内容</a>
           </div>
         </div>
       </div>
